--- a/config.sample.json
+++ b/config.sample.json
@@ -40,7 +40,7 @@
         "breadcrumbs": true
     },
     "jitsi": {
-        "preferred_domain": "meet.element.io"
+        "preferred_domain": "meet.yoteqi.com"
     },
     "element_call": {
         "url": "https://call.element.io",
