--- a/res/manifest.json
+++ b/res/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Element",
-    "short_name": "Element",
+    "name": "Yoteqi Chat",
+    "short_name": "Yoteqi Chat",
     "display": "standalone",
-    "theme_color": "#76CFA6",
+    "theme_color": "#fd3952",
     "start_url": "index.html",
     "icons": [
         {
@@ -74,8 +74,8 @@
     "related_applications": [
         {
             "platform": "play",
-            "url": "https://play.google.com/store/apps/details?id=im.vector.app",
-            "id": "im.vector.app"
+            "url": "https://play.google.com/store/apps/details?id=com.yotqi.chat",
+            "id": "com.yotqi.chat"
         },
         {
             "platform": "itunes",
